--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="noindex, nofollow">
     <title>Team | sleak</title>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="./src/assets/icons/apple-icon-57x57.png">
@@ -21,6 +22,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icons/favicon-16x16.png">
     <link rel="manifest" href="./src/assets/manifest.webmanifest">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-TileColor" content="#e41a1f">
     <meta name="msapplication-TileImage" content="./src/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#e41a1f">
