--- a/impressum.html
+++ b/impressum.html
@@ -38,7 +38,7 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a href="./index.html" class="menu__item js-menu__item">Magazin</a>
+            <a href="./" class="menu__item js-menu__item">Magazin</a>
           </li>
           <li class="menu__list-item">
             <a href="./team.html" class="menu__item js-menu__item">Team</a>
