--- a/team.html
+++ b/team.html
@@ -172,7 +172,7 @@
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Seine Devise: Schlicht und
             viel Weißraum. Designtechnisch minimalistisch
-            veranlagt, hat er einen großen Teil zum Grundgerüst des Magazins
+            veranlagt, hat er einen großen Teil zum Grundgerüst des Magazins
             beigetragen.</p>
         </div>
       </article>
@@ -185,7 +185,7 @@
             Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es
             Jennie.
             Sie hegt eine
-            Vorliebe für Pastellfarben und schlichte Typografie und erfreut
+            Vorliebe für Pastellfarben und schlichte Typografie und erfreut
             uns
             mit
             ihrem Interview einer Fotodesignerin. Privat heißt sie auf Reisen
@@ -250,7 +250,7 @@
             Etymologisch leitet sich der Name »Rieke« vom altgriechischen
             »rikos«
             ab, das eigentlich »Typographie« bedeutet. Genau hier
-            findet sich Rieke auch als Person wieder. Sie hat ein Gespür für
+            findet sich Rieke auch als Person wieder. Sie hat ein Gespür für
             Typographie und Gestaltung, welches ihr in ihrem Berufsleben
             sicherlich eine große Hilfe sein wird.
           </p>
@@ -274,12 +274,12 @@
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
-            Eine Löwin, eine Künsterlin, eine Leseratte - Das ist Sevda. Ihr
+            Eine Löwin, eine Künsterlin, eine Leseratte - Das ist Sevda. Ihr
             heiligster, materieller
             Schatz ist ihre rote Gameboy Konsole von 1990. Zockt sie damit
             gerade
             nicht,
-            schaut sie alle möglichen Filme. Ob K-Dramen oder türkische
+            schaut sie alle möglichen Filme. Ob K-Dramen oder türkische
             Serien,
             ihre
             Interessen sind breit gefächert.
@@ -297,10 +297,10 @@
             Das zeigt sich schon an ihrem kuriosen Musikgeschmack, der von
             koreanischer
             Popmusik bis zu Metal reicht und auch vor skurrilem Rave-Rap aus
-            Südafrika
+            Südafrika
             nicht Halt macht. Diese Vielseitigkeit zeigt sich auch in ihren
             Designarbeiten,
-            weshalb das Magazinprojekt wie für sie gemacht ist.
+            weshalb das Magazinprojekt wie für sie gemacht ist.
           </p>
         </div>
       </article>
@@ -312,7 +312,7 @@
           <p class="article__teaser-text team__text">
             Professionelle Fotografin und Surfergirl in einem, bildet Lia den
             Freigeist des Teams.
-            Ihre Tierliebe prägt ihr dauerfröhliches Gemüt, vor allem in
+            Ihre Tierliebe prägt ihr dauerfröhliches Gemüt, vor allem in
             anstrengenden
             Teamsitzungen. Im Magazin hat Lia die fotografische und die
             textliche
@@ -338,7 +338,7 @@
           <h1 class="article__title article__title--team js-article__title--team">Janina</h1>
         </header>
         <div class="article__teaser article__teaser--team">
-          <p class="article__teaser-text team__text">Sie künstlerisch kreativ
+          <p class="article__teaser-text team__text">Sie künstlerisch kreativ
             und musikalisch. Das Zeichnen ist ihre Leidenschaft.
             Unser Team bereichert sie mit ihrer Organisationsfähigkeit.</p>
         </div>
@@ -353,7 +353,7 @@
             Team
             die professio-
             nelle Seite der Magazinerstel- lung im Printbereich und un-
-            terstützte
+            terstützte
             die Studierenden mit WItz und Spaß an der Sache bei ihren
             gestalterischen
             Umsetzungen.
@@ -366,9 +366,9 @@
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
-            Erster Satz über einen kompetenten Professor. Zweiter Satz über
+            Erster Satz über einen kompetenten Professor. Zweiter Satz über
             einen kreativen
-            Designer. Dritter Satz über einen coolen Typen.
+            Designer. Dritter Satz über einen coolen Typen.
           </p>
         </div>
       </article>
