minor cleanup + a11y markup

--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
     <main>
       <article class="article article--team" id="felix">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Felix</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Felix</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Leidenschaftlicher
@@ -144,7 +144,7 @@
       </article>
       <article class="article article--team" id="michaela">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Michaela</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Michaela</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Michaela ist unser
@@ -156,7 +156,7 @@
       </article>
       <article class="article article--team" id="viktoria">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Viktoria</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Viktoria</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Viktoria eine sleeke
@@ -167,7 +167,7 @@
       </article>
       <article class="article article--team" id="max">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Max</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Max</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Seine Devise: Schlicht und
@@ -178,7 +178,7 @@
       </article>
       <article class="article article--team" id="jennie">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Jennie</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Jennie</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -198,7 +198,7 @@
       </article>
       <article class="article article--team" id="julien">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Julien</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Julien</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -211,7 +211,7 @@
       </article>
       <article class="article article--team" id="jonas">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Jonas</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Jonas</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Ein waschechter
@@ -224,7 +224,7 @@
       </article>
       <article class="article article--team" id="marvin">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Marvin</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Marvin</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -243,7 +243,7 @@
       </article>
       <article class="article article--team" id="rieke">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Rieke</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Rieke</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -258,7 +258,7 @@
       </article>
       <article class="article article--team" id="lena">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Lena</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Lena</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -270,7 +270,7 @@
       </article>
       <article class="article article--team" id="sevda">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Sevda</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Sevda</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -288,7 +288,7 @@
       </article>
       <article class="article article--team" id="judith">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Judith</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Judith</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -306,7 +306,7 @@
       </article>
       <article class="article article--team" id="lia">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Lia</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Lia</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -323,7 +323,7 @@
       </article>
       <article class="article article--team" id="nadine">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Nadine</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Nadine</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Hat Spaß am Schreiben,
@@ -335,7 +335,7 @@
       </article>
       <article class="article article--team" id="janina">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Janina</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Janina</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">Sie künstlerisch kreativ
@@ -345,7 +345,7 @@
       </article>
       <article class="article article--team" id="axel">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Axel</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Axel</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
@@ -362,7 +362,7 @@
       </article>
       <article class="article article--team" id="andreas">
         <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team">Andreas</h1>
+          <h1 class="article__title article__title--team js-article__title--team" role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Andreas</h1>
         </header>
         <div class="article__teaser article__teaser--team">
           <p class="article__teaser-text team__text">
